# Web-Traffic-TimeSeries-Analytics

./: .gitignore  Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml
boot/: docker-run.sh
notebooks/: demo-interacting-with-api.ipynb  hw.ipynb
src/: main.py
src/api/db/: config.py  session.py
src/api/events/: models.py  routing.py
