[project]
name = "analytics-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhishek Banerjee",email = "abhishek.banerjee18@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "timescaledb (>=0.0.4,<0.0.5)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pydantic (>=2.12.4,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
